--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,6 @@
-WALLET=
-USER_PRIVATE_KEY=
-MAIN_SERVER=
-NFT_TOKEN_ID=
-IP=
-PORT=
-
+NODE_WALLET_ADDRESS=
+NODE_SIGNER_KEY=
+MAIN_SERVER="https://test-backend-production-be8a.up.railway.app/taskengine"
+NODE_TOKEN_ID=0
+IP="AWS_STATIC_IP"
+PORT=3000
