--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,9 @@
-version: '3.8'
 services:
   python-app:
     build:
       context: .
       dockerfile_inline: |
-        FROM python:3.9-slim-buster
+        FROM python:3.9-slim
         WORKDIR /app
         RUN apt-get update && apt-get install -y \
             gcc \
