--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -26,6 +26,7 @@ services:
 
   torchserve:
     image: "public.ecr.aws/j7l3n4i5/playai-node-ai-engine-public-test:inference-latest"
+    #image uri can be changed to env = prod/test in this curly bracket in url playai-node-ai-engine-public-{env}
     container_name: torchserve
     ports:
       - "8080:8080"
