Refactor Code Remove Test Code

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 NODE_WALLET_ADDRESS=
 NODE_SIGNER_KEY=
-MAIN_SERVER="https://test-backend-production-be8a.up.railway.app/taskengine"
+MAIN_SERVER="https://node-dev.up.railway.app"
 NODE_TOKEN_ID=0
