--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,17 +2,7 @@ services:
   python-app:
     build:
       context: .
-      dockerfile_inline: |
-        FROM python:3.9-slim
-        WORKDIR /app
-        RUN apt-get update && apt-get install -y \
-            gcc \
-            python3-dev \
-            curl \
-            && rm -rf /var/lib/apt/lists/*
-        COPY . .
-        RUN pip install --no-cache-dir -r requirements.txt
-        RUN chmod +x start.sh
+      dockerfile: Dockerfile
     image: python-app:latest
     container_name: python-app
     ports:
@@ -26,7 +16,6 @@ services:
 
   torchserve:
     image: "public.ecr.aws/j7l3n4i5/playai-node-ai-engine-public-test:inference-latest"
-    #image uri can be changed to env = prod/test in this curly bracket in url playai-node-ai-engine-public-{env}
     container_name: torchserve
     ports:
       - "8080:8080"
