--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -33,5 +33,5 @@ services:
       - "8181:8181"
     environment:
       - MODEL_NAME=pubg_mvit_v2.mar
-    volumes:
-      - ./model_store:/home/model-server/model-store
+#    volumes:
+#      - ./model_store:/home/model-server/model-store
