--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,15 +1,16 @@
 services:
   playnode:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    image: playnode:latest
+    image: public.ecr.aws/j7l3n4i5/client/flask-app:latest
     container_name: playnode
     ports:
       - "3000:3000"
     environment:
       - FLASK_APP=app.py
       - TORCHSERVE_URL=http://torchserve:8080
+      - NODE_WALLET_ADDRESS='0xC29657430Dd4a78ef0AA52Ba6D6FAB63b17fB55A'
+      - NODE_SIGNER_KEY='0x74faa7eea8d93f94e932ba7058df5bc4c3eca518c77f80413d28af5dbbdebc24'
+      - MAIN_SERVER="https://node-dev.up.railway.app"
+      - NODE_TOKEN_ID=2
     command: ["/app/start.sh"]
     depends_on:
       - torchserve
