adding internal net and cleaning

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,13 +20,11 @@ services:
   torchserve:
     image: "public.ecr.aws/j7l3n4i5/playai-node-ai-engine-public-test:inference-latest"
     container_name: torchserve
+    networks:
+      - internal_net
     ports:
       - "8080:8080"
       - "8181:8181"
-#    environment:
-#      - MODEL_NAME=pubg_mvit_v3.mar
-#    volumes:
-#      - ./model_store:/home/model-server/model-store
 
 
   postprocessing:
