--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,7 +9,7 @@ services:
     environment:
       - FLASK_APP=app.py
       - TORCHSERVE_PORT=8083
-      - HOST_NAME="localhost" #use "torchserve" if you are running the torchserve container or locally
+      - HOST_NAME=localhost #use torchserve if you are running the torchserve container or locally, dont use quotes around name
     depends_on:
       - torchserve
 
