--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,6 @@
 services:
   playnode:
-    image: "public.ecr.aws/j7l3n4i5/client/flask-app-${ENV:-prod}:latest"
+    image: "public.ecr.aws/j7l3n4i5/client/flask-app-${ENV:-prod}:v1.0.1"
     container_name: playnode
     ports:
       - "3000:3000"
@@ -14,7 +14,7 @@ services:
       - torchserve
 
   torchserve:
-    image: "public.ecr.aws/j7l3n4i5/playai-node-ai-engine-public-${ENV:-prod}:inference-latest"
+    image: "public.ecr.aws/j7l3n4i5/playai-node-ai-engine-public-${ENV:-prod}:inference-v1.0.0"
     container_name: torchserve
     environment:
       - TORCHSERVE_PORT=8083
@@ -24,7 +24,7 @@ services:
 
 
   postprocessing:
-      image: "public.ecr.aws/j7l3n4i5/playai-node-ai-engine-public-${ENV:-prod}:postprocessing-latest"
+      image: "public.ecr.aws/j7l3n4i5/playai-node-ai-engine-public-${ENV:-prod}:postprocessing-v1.0.0"
       container_name: postprocessing
       command:
         - "postprocess_lambda_function.lambda_handler"
