--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,6 +2,8 @@ services:
   playnode:
     image: "public.ecr.aws/j7l3n4i5/client/flask-app-${ENV:-prod}:v1.0.1"
     container_name: playnode
+    networks:
+      - my-network
     ports:
       - "3000:3000"
     env_file:
@@ -17,6 +19,8 @@ services:
   torchserve:
     image: "public.ecr.aws/j7l3n4i5/playai-node-ai-engine-public-${ENV:-prod}:inference-v1.0.0"
     container_name: torchserve
+    networks:
+      - my-network
     environment:
       - TORCHSERVE_PORT=8083
     ports:
@@ -27,7 +31,12 @@ services:
   postprocessing:
       image: "public.ecr.aws/j7l3n4i5/playai-node-ai-engine-public-${ENV:-prod}:postprocessing-v1.0.0"
       container_name: postprocessing
+      networks:
+        - my-network
       command:
         - "postprocess_lambda_function.lambda_handler"
       ports:
         - "8080:8080"
+networks:
+  my-network:
+    driver: bridge
