--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,9 @@
 services:
   playnode:
-    image: "public.ecr.aws/j7l3n4i5/client/flask-app-${ENV:-prod}:latest"
+    image: "public.ecr.aws/j7l3n4i5/client/flask-app-${ENV:-prod}:v1.0.2"
     container_name: playnode
+    networks:
+      - my-network
     ports:
       - "3000:3000"
     env_file:
@@ -12,10 +14,13 @@ services:
       - HOST_NAME=torchserve
     depends_on:
       - torchserve
+      - postprocessing
 
   torchserve:
-    image: "public.ecr.aws/j7l3n4i5/playai-node-ai-engine-public-${ENV:-prod}:inference-latest"
+    image: "public.ecr.aws/j7l3n4i5/playai-node-ai-engine-public-${ENV:-prod}:inference-v1.0.0"
     container_name: torchserve
+    networks:
+      - my-network
     environment:
       - TORCHSERVE_PORT=8083
     ports:
@@ -24,9 +29,14 @@ services:
 
 
   postprocessing:
-      image: "public.ecr.aws/j7l3n4i5/playai-node-ai-engine-public-${ENV:-prod}:postprocessing-latest"
+      image: "public.ecr.aws/j7l3n4i5/playai-node-ai-engine-public-${ENV:-prod}:postprocessing-v1.0.0"
       container_name: postprocessing
+      networks:
+        - my-network
       command:
         - "postprocess_lambda_function.lambda_handler"
       ports:
         - "8080:8080"
+networks:
+  my-network:
+    driver: bridge
