--- a/.env.schema
+++ b/.env.schema
@@ -1,4 +1,4 @@
 NODE_WALLET_ADDRESS: string
 NODE_SIGNER_KEY: string
 MAIN_SERVER: string
-NODE_TOKEN_ID: string
+NODE_TOKEN_ID: string(list of int)
